OAKHILL/src/objects/Month_End_Balance__c.object
<CustomObject>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commitment_Funded__c</fullName>
        <label>% Commitment Funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commitment_Funded_c__c</fullName>
        <label>Commitment Funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contributions_With_Drawls__c</fullName>
        <label>Contributions / (With Drawls)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contributions__c</fullName>
        <label>Contributions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distributions__c</fullName>
        <label>Distributions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Return__c</fullName>
        <label>Gross Return</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Incentive_Allocation__c</fullName>
        <label>Incentive Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_End_Balance__c</fullName>
        <label>Month-End Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Format_DDP__c</fullName>
        <formula>IF( Month( As_of_Date__c ) = 1, &quot;Jan&quot;, IF( Month( As_of_Date__c ) = 2, &quot;Feb&quot;, IF( Month( As_of_Date__c ) = 3, &quot;Mar&quot;, IF( Month( As_of_Date__c ) = 4, &quot;Apr&quot;, IF( Month( As_of_Date__c ) = 5, &quot;May&quot;, IF( Month( As_of_Date__c ) = 6, &quot;Jun&quot;, IF( Month( As_of_Date__c ) = 7, &quot;Jul&quot;, IF( Month( As_of_Date__c ) = 8, &quot;Aug&quot;, IF( Month( As_of_Date__c ) = 9, &quot;Sep&quot;, IF( Month( As_of_Date__c ) = 10, &quot;Oct&quot;, IF( Month( As_of_Date__c ) = 11, &quot;Nov&quot;, IF( Month( As_of_Date__c ) = 12, &quot;Dec&quot;, &quot;&quot;)))))))))))) &amp; &quot; &quot; &amp; TEXT(YEAR( As_of_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Format DDP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_as_Number__c</fullName>
        <formula>value ( Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name as Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Appreciation_Depreciation__c</fullName>
        <label>Net Appreciation / (Depreciation)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Balance__c</fullName>
        <label>Begin Balance Net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Income_Loss__c</fullName>
        <label>Net Income/Loss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Return_QTR__c</fullName>
        <label>Net Return % - QTR</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Return__c</fullName>
        <label>Net Return</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <label>Related Account</label>
        <referenceTo>Related_Account__c</referenceTo>
        <relationshipLabel>Month End Balances</relationshipLabel>
        <relationshipName>Month_End_Balances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Report_Generator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Generator</label>
        <referenceTo>Report_Generator__c</referenceTo>
        <relationshipName>Capital_Balances_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Same_Year__c</fullName>
        <formula>IF (YEAR ( As_of_Date__c ) = YEAR (TODAY()), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Same Year?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_Other__c</fullName>
        <label>Transfer/Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD_Equivalent_Month_End_Balance__c</fullName>
        <label>USD Equivalent Month-End Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id , &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Month End Balance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Month End Balance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Month End Balances</pluralLabel>
    <recordTypes>
        <fullName>Month_End_Balance</fullName>
        <active>true</active>
        <label>Month-End Balance</label>
    </recordTypes>
    <recordTypes>
        <fullName>OHA_Administered_Month_End_Balance</fullName>
        <active>true</active>
        <label>OHA Administered Month-End Balance</label>
    </recordTypes>
    <recordTypes>
        <fullName>OHA_Cap_Solutions_Month_End_Balance</fullName>
        <active>true</active>
        <label>OHA Cap Solutions Month-End Balance</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>